publish open-in-editor2@2.2.1

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "open-in-editor",
+  "name": "open-in-editor2",
   "description": "Open file in editor",
   "version": "2.2.1",
   "author": "Roman Dvornov <rdvornov@gmail.com>",
